# pkg/route/auth.go
@@ -1,0 +1,16 @@
+package route
+
+import (
+	"github.com/CSCI-X050-A7/backend/app/controller"
+	"github.com/CSCI-X050-A7/backend/pkg/middleware"
+
+	"github.com/gofiber/fiber/v2"
+)
+
+func AuthRoutes(a *fiber.App) {
+	route := a.Group("/api/v1/auth")
+	route.Post("/login", controller.Login)
+	routeProtected := route.Group("", middleware.JWTProtected())
+	routeProtected.Post("/logout", controller.Logout)
+	routeProtected.Post("/jwt", controller.JWT)
+}
